Updating site to new image and colors

--- a/index.html
+++ b/index.html
@@ -36,14 +36,9 @@
   	</ul>
 </nav>
 
-<table>
-<tr>
-  <td style="width:5%" align="center">
-  </td>
-  <td>
-    <img class="headshot" src="img/maaret_transparent.png" style="height:400px;"/>
-  </td>
-  <td style="width:70%" align="center" >
+    <div class="grouping">
+    <img class="headshot" src = "img/maaret-2020.jpg" alt="picture of Maaret">
+    <div class="listing">
     <h1> Maaret Pyhäjärvi </h1>
 
     Feedback Fairy. <br>
@@ -59,37 +54,39 @@
     <i>I make people awesome.</i><p>
 
     <h4>Spoken at events in 25 countries</h4>
-    <table>
-    <td><img class="flag" height="20" src="flags/4x3/fi.svg" alt="Finland "></td>
-    <td><img class="flag" height="20" src="flags/4x3/se.svg" alt="Sweden"></td>
-    <td><img class="flag" height="20" src="flags/4x3/no.svg" alt="Norway"></td>
-    <td><img class="flag" height="20" src="flags/4x3/dk.svg" alt="Denmark"></td>
-    <td><img class="flag" height="20" src="flags/4x3/lv.svg" alt="Latvia"></td>
-    <td><img class="flag" height="20" src="flags/4x3/ee.svg" alt="Estonia"></td>
-    <td><img class="flag" height="20" src="flags/4x3/us.svg" alt="US"></td>
-    <td><img class="flag" height="20" src="flags/4x3/ch.svg" alt="Switzerland"></td>
-    <td><img class="flag" height="20" src="flags/4x3/hu.svg" alt="Hungary"></td>
-    <td><img class="flag" height="20" src="flags/4x3/fr.svg" alt="France"></td>
-    <td><img class="flag" height="20" src="flags/4x3/be.svg" alt="Belgium"></td>
-    <td><img class="flag" height="20" src="flags/4x3/hr.svg" alt="Croatia"></td>
-    <td><img class="flag" height="20" src="flags/4x3/md.svg" alt="Moldova"></td>
-    <td><img class="flag" height="20" src="flags/4x3/pt.svg" alt="Portugal"></td>
-    <td><img class="flag" height="20" src="flags/4x3/pl.svg" alt="Poland"></td>
-    <td><img class="flag" height="20" src="flags/4x3/ro.svg" alt="Romania"></td>
-    <td><img class="flag" height="20" src="flags/4x3/rs.svg" alt="Serbia"></td>
-    <td><img class="flag" height="20" src="flags/4x3/de.svg" alt="Germany"></td>
-    <td><img class="flag" height="20" src="flags/4x3/es.svg" alt="Spain"></td>
-    <td><img class="flag" height="20" src="flags/4x3/gb.svg" alt="United Kingdom"></td>
-    <td><img class="flag" height="20" src="flags/4x3/bg.svg" alt="Bulgaria"></td>
-    <td><img class="flag" height="20" src="flags/4x3/in.svg" alt="India"></td>
-    <td><img class="flag" height="20" src="flags/4x3/au.svg" alt="Australia"></td>
-    <td><img class="flag" height="20" src="flags/4x3/tr.svg" alt="Turkey"></td>
+    <img class="flag" height="20" src="flags/4x3/fi.svg" alt="Finland ">
+    <img class="flag" height="20" src="flags/4x3/se.svg" alt="Sweden">
+    <img class="flag" height="20" src="flags/4x3/no.svg" alt="Norway">
+    <img class="flag" height="20" src="flags/4x3/dk.svg" alt="Denmark">
+    <img class="flag" height="20" src="flags/4x3/lv.svg" alt="Latvia">
+    <img class="flag" height="20" src="flags/4x3/ee.svg" alt="Estonia">
+    <img class="flag" height="20" src="flags/4x3/us.svg" alt="US">
+    <img class="flag" height="20" src="flags/4x3/ch.svg" alt="Switzerland">
+    <img class="flag" height="20" src="flags/4x3/hu.svg" alt="Hungary">
+    <img class="flag" height="20" src="flags/4x3/fr.svg" alt="France">
+    <img class="flag" height="20" src="flags/4x3/be.svg" alt="Belgium">
+    <img class="flag" height="20" src="flags/4x3/hr.svg" alt="Croatia">
+    <img class="flag" height="20" src="flags/4x3/md.svg" alt="Moldova">
+    <img class="flag" height="20" src="flags/4x3/pt.svg" alt="Portugal">
+    <img class="flag" height="20" src="flags/4x3/pl.svg" alt="Poland">
+    <img class="flag" height="20" src="flags/4x3/ro.svg" alt="Romania">
+    <img class="flag" height="20" src="flags/4x3/rs.svg" alt="Serbia">
+    <img class="flag" height="20" src="flags/4x3/de.svg" alt="Germany">
+    <img class="flag" height="20" src="flags/4x3/es.svg" alt="Spain">
+    <img class="flag" height="20" src="flags/4x3/gb.svg" alt="United Kingdom">
+    <img class="flag" height="20" src="flags/4x3/bg.svg" alt="Bulgaria">
+    <img class="flag" height="20" src="flags/4x3/in.svg" alt="India">
+    <img class="flag" height="20" src="flags/4x3/au.svg" alt="Australia">
+    <img class="flag" height="20" src="flags/4x3/tr.svg" alt="Turkey">
       <!--Total talk count by end of 2018 380 talks-->
       <!--add flags of all countries I've spoken at-->
-    </table>
-</td>
-</tr>
-</table>
+  </div>
+  </div>
+
+
+<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1400 230">
+<path fill="#0492C2" fill-opacity="1"
+d="M0,192L34.3,202.7C68.6,213,137,235,206,229.3C274.3,224,343,192,411,160C480,128,549,96,617,106.7C685.7,117,754,171,823,197.3C891.4,224,960,224,1029,213.3C1097.1,203,1166,181,1234,170.7C1302.9,160,1371,160,1406,160L1440,160L1440,320L1405.7,320C1371.4,320,1303,320,1234,320C1165.7,320,1097,320,1029,320C960,320,891,320,823,320C754.3,320,686,320,617,320C548.6,320,480,320,411,320C342.9,320,274,320,206,320C137.1,320,69,320,34,320L0,320Z"></path></svg>
 
 <footer class="main-footer">
     <div class="contact">
