--- a/myTalks.html
+++ b/myTalks.html
@@ -38,59 +38,45 @@
 
 <h1>Speaking Engagements</h1>
 
-<table width="75%">
-<th>Spoken at events in 25 countries</th>
-<table width="75%">
-<td><img class="flag" height="20" src="flags/4x3/fi.svg" alt="Finland "></td>
-<td><img class="flag" height="20" src="flags/4x3/se.svg" alt="Sweden"></td>
-<td><img class="flag" height="20" src="flags/4x3/no.svg" alt="Norway"></td>
-<td><img class="flag" height="20" src="flags/4x3/dk.svg" alt="Denmark"></td>
-<td><img class="flag" height="20" src="flags/4x3/lv.svg" alt="Latvia"></td>
-<td><img class="flag" height="20" src="flags/4x3/ee.svg" alt="Estonia"></td>
-<td><img class="flag" height="20" src="flags/4x3/us.svg" alt="US"></td>
-<td><img class="flag" height="20" src="flags/4x3/ch.svg" alt="Switzerland"></td>
-<td><img class="flag" height="20" src="flags/4x3/hu.svg" alt="Hungary"></td>
-<td><img class="flag" height="20" src="flags/4x3/fr.svg" alt="France"></td>
-<td><img class="flag" height="20" src="flags/4x3/be.svg" alt="Belgium"></td>
-<td><img class="flag" height="20" src="flags/4x3/hr.svg" alt="Croatia"></td>
-<td><img class="flag" height="20" src="flags/4x3/md.svg" alt="Moldova"></td>
-<td><img class="flag" height="20" src="flags/4x3/pt.svg" alt="Portugal"></td>
-<td><img class="flag" height="20" src="flags/4x3/pl.svg" alt="Poland"></td>
-<td><img class="flag" height="20" src="flags/4x3/ro.svg" alt="Romania"></td>
-<td><img class="flag" height="20" src="flags/4x3/nl.svg" alt="Netherlands"></td>
-<td><img class="flag" height="20" src="flags/4x3/rs.svg" alt="Serbia"></td>
-<td><img class="flag" height="20" src="flags/4x3/de.svg" alt="Germany"></td>
-<td><img class="flag" height="20" src="flags/4x3/es.svg" alt="Spain"></td>
-<td><img class="flag" height="20" src="flags/4x3/gb.svg" alt="United Kingdom"></td>
-<td><img class="flag" height="20" src="flags/4x3/bg.svg" alt="Bulgaria"></td>
-<td><img class="flag" height="20" src="flags/4x3/in.svg" alt="India"></td>
-<td><img class="flag" height="20" src="flags/4x3/au.svg" alt="Australia"></td>
-<td><img class="flag" height="20" src="flags/4x3/gr.svg" alt="Greece"></td>
-
-  <!--Total talk count by end of 2017 353 talks-->
-  <!--add flags of all countries I've spoken at-->
-</table>
-</table>
+<h4>Spoken at events in 25 countries</h4>
+    <img class="flag" height="20" src="flags/4x3/fi.svg" alt="Finland ">
+    <img class="flag" height="20" src="flags/4x3/se.svg" alt="Sweden">
+    <img class="flag" height="20" src="flags/4x3/no.svg" alt="Norway">
+    <img class="flag" height="20" src="flags/4x3/dk.svg" alt="Denmark">
+    <img class="flag" height="20" src="flags/4x3/lv.svg" alt="Latvia">
+    <img class="flag" height="20" src="flags/4x3/ee.svg" alt="Estonia">
+    <img class="flag" height="20" src="flags/4x3/us.svg" alt="US">
+    <img class="flag" height="20" src="flags/4x3/ch.svg" alt="Switzerland">
+    <img class="flag" height="20" src="flags/4x3/hu.svg" alt="Hungary">
+    <img class="flag" height="20" src="flags/4x3/fr.svg" alt="France">
+    <img class="flag" height="20" src="flags/4x3/be.svg" alt="Belgium">
+    <img class="flag" height="20" src="flags/4x3/hr.svg" alt="Croatia">
+    <img class="flag" height="20" src="flags/4x3/md.svg" alt="Moldova">
+    <img class="flag" height="20" src="flags/4x3/pt.svg" alt="Portugal">
+    <img class="flag" height="20" src="flags/4x3/pl.svg" alt="Poland">
+    <img class="flag" height="20" src="flags/4x3/ro.svg" alt="Romania">
+    <img class="flag" height="20" src="flags/4x3/rs.svg" alt="Serbia">
+    <img class="flag" height="20" src="flags/4x3/de.svg" alt="Germany">
+    <img class="flag" height="20" src="flags/4x3/es.svg" alt="Spain">
+    <img class="flag" height="20" src="flags/4x3/gb.svg" alt="United Kingdom">
+    <img class="flag" height="20" src="flags/4x3/bg.svg" alt="Bulgaria">
+    <img class="flag" height="20" src="flags/4x3/in.svg" alt="India">
+    <img class="flag" height="20" src="flags/4x3/au.svg" alt="Australia">
+    <img class="flag" height="20" src="flags/4x3/tr.svg" alt="Turkey">
 
 <p><p>
 
-<table>
-  <td>
 
   <h2>UPCOMING CONFERENCES & MEETUPS & WEBINARS & TRAININGS</h2>
 
   <ul>
-    <li>Mimmit Koodaa (Women who Code) Webinar August 14th
-      <br>Kuinka testaajaksi opitaan? - uranvaihtajan kesä koekaniinina
-      <br>(How to Learn to Become Tester - Career Changer's Summer as Lab Rat)</li>
-    <li><a href="https://stepinsummit.stepinforum.org">STEP-IN SUMMIT 2020 September 3-4th</a>
-      <br>TALK: Opportunity Cost Drives My Testing</li>
     <li> ICST / NEXTA 2020 October 24th
       <br> PAPER: Test Automation Process Improvement in a DevOps Team: Experience Report at NEXTA 2020</li>
     <li> <a href="https://theshift.fi/persons/maaret-pyhajarvi/">SHIFT Business Webstival 2020</a>, October 27-28th.
-      <br>TALK</li>
+      <br>TALK: The hacker mindset or breaking something to make it work</li>
     <li> <a href="https://testingunited.com/day-2_2020/">Testing United Conference November 5-6th</a>
       <br>KEYNOTE: Social Software Testing Approaches </li>
+    <li>Tutkivan testauksen ty&ouml;kurssi, Alma Talent, Feb 9-10th
   </ul>
 
 </p>I'm taking a break from traveling to conferences after I reached 400 sessions Dec 13th 2019,
@@ -102,13 +88,9 @@ happy to appear in podcasts, webinars and anything that requires no travel. <p>
     </ul>
    -->
 
-</td>
-</table>
 
 <p><p>
 
-<table>
-  <td>
 
 <h2>FULL LIST OF SPEAKING ENGAGEMENTS</h2>
 <div style="text-align: left;">
@@ -118,7 +100,7 @@ happy to appear in podcasts, webinars and anything that requires no travel. <p>
 <br />
 
 <i>Opportunity Cost Drives my Testing</i><br />
-&nbsp; Speaker at Step-In Summit Conference (4.9.2020), Online<br />
+&nbsp; Keynote Speaker at Step-In Summit Conference (4.9.2020), Online<br />
 <br />
 
 <i>Social Software Testing Approaches</i><br />
@@ -521,8 +503,6 @@ happy to appear in podcasts, webinars and anything that requires no travel. <p>
 <p><p><p>
 [<a href="http://visible-quality.blogspot.fi/p/my-talks.html">2014 and older</a>]
 
-</td>
-</table>
 
 </body>
 
