--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
   <link href="https://fonts.googleapis.com/css?family=Lato|Lobster" rel="stylesheet">
   <link type="text/css" rel="stylesheet" href="new_styles.css" media="all" />
-  <link rel="stylesheet" href="img/icomoon/style.css"></head>
+  <link rel="stylesheet" href="img/icomoon/style.css">
 </head>
 
 <body>
