--- a/myTalks.html
+++ b/myTalks.html
@@ -74,13 +74,16 @@
       <br> PAPER: Test Automation Process Improvement in a DevOps Team: Experience Report at NEXTA 2020</li>
     <li> <a href="https://theshift.fi/persons/maaret-pyhajarvi/">SHIFT Business Webstival 2020</a>, October 27-28th.
       <br>TALK: The hacker mindset or breaking something to make it work</li>
-    <li> <a href="https://testingunited.com/day-2_2020/">Testing United Conference November 5-6th</a>
+    <li> <a href="https://testingunited.com/day-2_2020/">Testing United Conference, November 5-6th</a>
       <br>KEYNOTE: Social Software Testing Approaches </li>
-    <li>Tutkivan testauksen ty&ouml;kurssi, Alma Talent, Feb 9-10th
+    <li><a href="https://onlinetestconf.com">Online Test Conf, December 1-3 2020</a>
+      <br>TALK: A Case of Failure: Pinpointing a problem for correction</li>
+    <li>COURSE: Testauksen alkeet, Alma Talent, 3rd week of January</li>
+    <li>COURSE: Tutkivan testauksen ty&ouml;kurssi, Alma Talent, Feb 9-10th</li>
   </ul>
 
 </p>I'm taking a break from traveling to conferences after I reached 400 sessions Dec 13th 2019,
-happy to appear in podcasts, webinars and anything that requires no travel. <p>
+happy to appear in podcasts, webinars, remote conferences and anything that requires no travel. <p>
 
   <!--
   <H2>UPCOMING PUBLIC TRAININGS</H2>
