--- a/myTalks.html
+++ b/myTalks.html
@@ -76,6 +76,8 @@
       <br>TALK: The hacker mindset or breaking something to make it work</li>
     <li> <a href="https://testingunited.com/day-2_2020/">Testing United Conference, November 5-6th</a>
       <br>KEYNOTE: Social Software Testing Approaches </li>
+    <li> <a href="https://mimmitkoodaa.ohjelmistoebusiness.fi/thisisnotawebinar/">Mimmit Koodaa This is not a webinar, November 20th</a>
+      <br>TALK: Testiautomaatio on testauksen dokumentointia (Test Automation is Test Documentation)</li>
     <li><a href="https://onlinetestconf.com">Online Test Conf, December 1-3 2020</a>
       <br>TALK: A Case of Failure: Pinpointing a problem for correction</li>
     <li>COURSE: Testauksen alkeet, Alma Talent, 3rd week of January</li>
