--- a/myTalks.html
+++ b/myTalks.html
@@ -70,12 +70,16 @@
   <h2>UPCOMING CONFERENCES & MEETUPS & WEBINARS & TRAININGS</h2>
 
   <ul>
+    <li><a href="https://seleniumday.com/online-anz/">Selenium Day - ANZ, October 16th</a>
+      <br>TALK: Test Automation Process Improvement in a DevOps Team: Experience Report</li>
     <li> ICST / NEXTA 2020 October 24th
       <br> PAPER: Test Automation Process Improvement in a DevOps Team: Experience Report at NEXTA 2020</li>
     <li> <a href="https://theshift.fi/persons/maaret-pyhajarvi/">SHIFT Business Webstival 2020</a>, October 27-28th.
       <br>TALK: The hacker mindset or breaking something to make it work</li>
-    <li> <a href="https://testingunited.com/day-2_2020/">Testing United Conference, November 5-6th</a>
+    <li> <a href="https://testingunited.com/day-2_2020/">Testing United Conference, November 5-6th, 2020</a>
       <br>KEYNOTE: Social Software Testing Approaches </li>
+    <li><a href="https://www.thetesttribe.com/testflix/">TestFlix, November 28th, 2020</a>
+      <br>TALK: Up Your Agency</li>
     <li> <a href="https://mimmitkoodaa.ohjelmistoebusiness.fi/thisisnotawebinar/">Mimmit Koodaa This is not a webinar, November 20th</a>
       <br>TALK: Testiautomaatio on testauksen dokumentointia (Test Automation is Test Documentation)</li>
     <li><a href="https://onlinetestconf.com">Online Test Conf, December 1-3 2020</a>
