Add podcast appearance

--- a/myArticles.html
+++ b/myArticles.html
@@ -60,7 +60,7 @@
   <h2>PODCAST APPEARANCES</h2>
 
   <ul style="text-align: left;">
-    <li>Quality Coaching, recorded in July 15th.
+    <li>Quality Coach Roadshow <a href="https://www.spreaker.com/user/charrett/quality-coach-roadshow-episode-15-maaret">Episode 15 Quality Coach Roadshow Maaret Pyhäjärvi</a>, recorded in July 15th. </li>
     <li>AB Testing, <a href="https://www.angryweasel.com/ABTesting/ab-testing-episode-124-learning-with-maaret/">Learning with Maaret</a> on July 13th, 2020 </li>
     <li>Developer Melange, <a href="https://developermelange.com/034-time-travel-to-the-past/">Time Travel to the Past</a> July 1st, 2020</li>
     <li>Modern Agile Show, <a href="https://www.youtube.com/watch?v=IETVizs_x2M">Interview with Maaret Pyhäjärvi</a>, April 22nd, 2020</li>
