--- a/myTalks.html
+++ b/myTalks.html
@@ -70,12 +70,6 @@
   <h2>UPCOMING CONFERENCES & MEETUPS & WEBINARS & TRAININGS</h2>
 
   <ul>
-    <li><a href="https://seleniumday.com/online-anz/">Selenium Day - ANZ, October 16th</a>
-      <br>TALK: Test Automation Process Improvement in a DevOps Team: Experience Report</li>
-    <li> ICST / NEXTA 2020 October 24th
-      <br> PAPER: Test Automation Process Improvement in a DevOps Team: Experience Report at NEXTA 2020</li>
-    <li> <a href="https://theshift.fi/persons/maaret-pyhajarvi/">SHIFT Business Webstival 2020</a>, October 27-28th.
-      <br>TALK: The hacker mindset or breaking something to make it work</li>
     <li> <a href="https://testingunited.com/day-2_2020/">Testing United Conference, November 5-6th, 2020</a>
       <br>KEYNOTE: Social Software Testing Approaches </li>
     <li><a href="https://www.thetesttribe.com/testflix/">TestFlix, November 28th, 2020</a>
@@ -84,6 +78,8 @@
       <br>TALK: Testiautomaatio on testauksen dokumentointia (Test Automation is Test Documentation)</li>
     <li><a href="https://onlinetestconf.com">Online Test Conf, December 1-3 2020</a>
       <br>TALK: A Case of Failure: Pinpointing a problem for correction</li>
+    <li><a href="https://gtr.agiletestingalliance.org">Agile Testing Alliance Global Testing Retreat, December 12-13th 2020</a>
+      <br>KEYNOTE: Building Status - or Why None of My Advice Will Work for You Today</li>
     <li>COURSE: Testauksen alkeet, Alma Talent, 3rd week of January</li>
     <li>COURSE: Tutkivan testauksen ty&ouml;kurssi, Alma Talent, Feb 9-10th</li>
   </ul>
@@ -104,16 +100,41 @@ happy to appear in podcasts, webinars, remote conferences and anything that requ
 <h2>FULL LIST OF SPEAKING ENGAGEMENTS</h2>
 <div style="text-align: left;">
 
+<i>Building Status - or Why None of My Advice Will Work for You Today</i><br />
+&nbsp; Keynote Speaker at Agile Testing Alliance Global Testing Retreat (12-13.12.2020), Online<br />
+<br />
+
+<i>Social Software Testing Approaches</i><br />
+&nbsp; Keynote Speaker at Testing United Conference (5-6.11.2020), Online<br />
+<br />
+
+<i>Test Automation is Test Documentation, demo talk</i><br />
+&nbsp; Speaker at Mimmit Koodaa This Is Not a Webinar (20.11.2020), Online<br />
+<br />
+
+<i>A Case of Failure: Pinpointing a Problem for Correction</i><br />
+&nbsp; Speaker at Online Testing Conference (1-3.12.2020), Online<br />
+<br />
+
+<i>Test Automation Process Improvement in a DevOps Team: Experience Report</i><br />
+&nbsp; Speaker at ICST / NEXTA 2020 (24.10.2020), Online<br />
+&nbsp; Speaker at Selenium Day ANZ (16.10.2020), Online<br />
+<br />
+
+<i>Up Your Agency</i><br />
+&nbsp; Speaker at TextFlix (28.11.2020), Online<br />
+<br />
+
+<i>The hacker mindset or breaking something to make it work</i><br />
+&nbsp; Speaker at SHIFT Business Webstival 2020 (27.10.2020), Online<br />
+<br />
+
 <i>Exploratory Testing Shift Left and Right - What great exploratory testing looks under conditions of TOAD (Testing, Observability and DevOps)</i><br />
 &nbsp; Speaker at OmniTesting Conference (16.7.2020), Online<br />
 <br />
 
 <i>Opportunity Cost Drives my Testing</i><br />
 &nbsp; Keynote Speaker at Step-In Summit Conference (4.9.2020), Online<br />
-<br />
-
-<i>Social Software Testing Approaches</i><br />
-&nbsp; Keynote Speaker at Testing United Conference (5-6.11.2020), Online<br />
 <br />
 
 <i>Kuinka testaajaksi opitaan? - uranvaihtajan kesä koekaniinina (How to Learn to Become Tester - Career Changer's Summer as Lab Rat)</i><br />
