--- a/myTalks.html
+++ b/myTalks.html
@@ -126,8 +126,17 @@ happy to appear in podcasts, webinars, remote conferences and anything that requ
 <br />
 
 <i>The hacker mindset or breaking something to make it work</i><br />
-&nbsp; Speaker at SHIFT Business Webstival 2020 (27.10.2020), Online<br />
+&nbsp; Speaker at SHIFT Business Webstival (27.10.2020), Online<br />
 <br />
+
+<i>What Does Testing Mean Today?<i><br />
+&nbsp; Panelist at BCS SIGiST (20.10.2020), Online<br />
+<br />
+
+<i>Ensuring Excellent Overall Quality Dialogue<i><br />
+&nbsp; Panelist at Scan Agile (21.9.2020), Online<br />
+<br />
+
 
 <i>Exploratory Testing Shift Left and Right - What great exploratory testing looks under conditions of TOAD (Testing, Observability and DevOps)</i><br />
 &nbsp; Speaker at OmniTesting Conference (16.7.2020), Online<br />
