Updated site for 2020 end level

--- a/myArticles.html
+++ b/myArticles.html
@@ -60,7 +60,9 @@
   <h2>PODCAST APPEARANCES</h2>
 
   <ul style="text-align: left;">
-    <li>Quality Coach Roadshow <a href="https://www.spreaker.com/user/charrett/quality-coach-roadshow-episode-15-maaret">Episode 15 Quality Coach Roadshow Maaret Pyhäjärvi</a>, recorded in July 15th. </li>
+    <li>Quare Meetcast <a href="https://open.spotify.com/episode/4zD1JdIBPCXeluxbIf9MAm">Exploratory Testing Reclaimed with Maaret and Anne-Marie</a> on December 16th 2020. </li>
+    <li>Code Her Stories <a href="https://www.youtube.com/watch?v=S7GpUz_BNW8">Conversation with Maaret Pyhäjärvi</a>, on December 5th 2020</li>
+    <li>Quality Coach Roadshow <a href="https://www.spreaker.com/user/charrett/quality-coach-roadshow-episode-15-maaret">Episode 15 Quality Coach Roadshow Maaret Pyhäjärvi</a>, recorded in July 15th 2020. </li>
     <li>AB Testing, <a href="https://www.angryweasel.com/ABTesting/ab-testing-episode-124-learning-with-maaret/">Learning with Maaret</a> on July 13th, 2020 </li>
     <li>Developer Melange, <a href="https://developermelange.com/034-time-travel-to-the-past/">Time Travel to the Past</a> July 1st, 2020</li>
     <li>Modern Agile Show, <a href="https://www.youtube.com/watch?v=IETVizs_x2M">Interview with Maaret Pyhäjärvi</a>, April 22nd, 2020</li>
@@ -145,9 +147,12 @@
 <h2>Awards and Nominations</h2>
 
 <ul>
-  <li>ICT 100 Most Influential 2019 by Tivi, December 2019</li>
-  <li>Most Influential Agile Testing Professional Person 2016, awarded by Agile Testing Days</li>
+  <li>ICT 100 Most Influential 2019, 2020 by Tivi</li>
+  <li>Most Influential Agile Testing Professional Person (MIATPP) 2016, awarded by Agile Testing Days</li>
+  <li>EuroSTAR Testing Excellence Award 2020</li>
 </ul>
+
+<img src="img/banner_awards.jpg">
 
 </body>
 
