--- a/myTalks.html
+++ b/myTalks.html
@@ -70,16 +70,8 @@
   <h2>UPCOMING CONFERENCES & MEETUPS & WEBINARS & TRAININGS</h2>
 
   <ul>
-    <li> <a href="https://testingunited.com/day-2_2020/">Testing United Conference, November 5-6th, 2020</a>
-      <br>KEYNOTE: Social Software Testing Approaches </li>
-    <li><a href="https://www.thetesttribe.com/testflix/">TestFlix, November 28th, 2020</a>
-      <br>TALK: Up Your Agency</li>
-    <li> <a href="https://mimmitkoodaa.ohjelmistoebusiness.fi/thisisnotawebinar/">Mimmit Koodaa This is not a webinar, November 20th</a>
-      <br>TALK: Testiautomaatio on testauksen dokumentointia (Test Automation is Test Documentation)</li>
-    <li><a href="https://onlinetestconf.com">Online Test Conf, December 1-3 2020</a>
-      <br>TALK: A Case of Failure: Pinpointing a problem for correction</li>
-    <li><a href="https://gtr.agiletestingalliance.org">Agile Testing Alliance Global Testing Retreat, December 12-13th 2020</a>
-      <br>KEYNOTE: Building Status - or Why None of My Advice Will Work for You Today</li>
+    <li>German Testing Days May 3rd-4th, 2021
+      <br>KEYNOTE</li>
     <li>COURSE: Testauksen alkeet, Alma Talent, 3rd week of January</li>
     <li>COURSE: Tutkivan testauksen ty&ouml;kurssi, Alma Talent, Feb 9-10th</li>
   </ul>
