--- a/myTalks.html
+++ b/myTalks.html
@@ -117,6 +117,12 @@ happy to appear in podcasts, webinars, remote conferences and anything that requ
 &nbsp; Speaker at TextFlix (28.11.2020), Online<br />
 <br />
 
+<i>Testing: from Why to How to What Next</i><br />
+&nbsp; Speaker at JAMK (9.10.2020), Online<br />
+&nbsp; Speaker at JAMK (2.11.2020), Online<br />
+&nbsp; Speaker at JAMK (1.12.2020), Online<br />
+<br />
+
 <i>The hacker mindset or breaking something to make it work</i><br />
 &nbsp; Speaker at SHIFT Business Webstival (27.10.2020), Online<br />
 <br />
