--- a/myTalks.html
+++ b/myTalks.html
@@ -123,7 +123,7 @@ happy to appear in podcasts, webinars, remote conferences and anything that requ
 &nbsp; Speaker at JAMK (1.12.2020), Online<br />
 <br />
 
-<i>The hacker mindset or breaking something to make it work</i><br />
+<i>The Hacker Mindset or Breaking Something to Make it Work</i><br />
 &nbsp; Speaker at SHIFT Business Webstival (27.10.2020), Online<br />
 <br />
 
