--- a/index.html
+++ b/index.html
@@ -78,8 +78,10 @@
     <img class="flag" height="20" src="flags/4x3/in.svg" alt="India">
     <img class="flag" height="20" src="flags/4x3/au.svg" alt="Australia">
     <img class="flag" height="20" src="flags/4x3/tr.svg" alt="Turkey">
-      <!--Total talk count by end of 2018 380 talks-->
+      <!--Total talk count by end of 2020 426 talks-->
       <!--add flags of all countries I've spoken at-->
+    <script type='text/javascript' src='https://ko-fi.com/widgets/widget_2.js'></script><script type='text/javascript'>kofiwidget2.init('Support Me on Ko-fi', '#02A4D3', 'F1F61M6QO');kofiwidget2.draw();</script> 
+
   </div>
   </div>
 
