--- a/index.html
+++ b/index.html
@@ -80,7 +80,9 @@
     <img class="flag" height="20" src="flags/4x3/tr.svg" alt="Turkey">
       <!--Total talk count by end of 2020 426 talks-->
       <!--add flags of all countries I've spoken at-->
-      <br>
+      <br />
+      <br />
+      <br />
     <script type='text/javascript' src='https://ko-fi.com/widgets/widget_2.js'></script><script type='text/javascript'>kofiwidget2.init('Support Me on Ko-fi', '#02A4D3', 'F1F61M6QO');kofiwidget2.draw();</script>
 
   </div>
@@ -162,7 +164,8 @@ d="M0,192L34.3,202.7C68.6,213,137,235,206,229.3C274.3,224,343,192,411,160C480,12
     <div class="footer-elsewhere">
         <h3>... and my projects</h3>
         <ul>
-          <li><a href="https://europeantestingconference.eu"> European Testing Conference </a> </li>
+          <li><a href="https://exploratorytesting.libsyn.com">Exploratory Testing Podcast</a></li>
+          <li><a href="">Exploratory Testing Academy</a></li>
           <li><a href="https://techvoices.org"> Tech Voices </a></li>
           <li><a href="https://testausyhdistys.fi"> Finnish Association for Software Testing</a></li>
           <li><a href="https://www.meetup.com/Tech-Excellence-Finland/"> Tech Excellence Finland Meetup </a></li>
