--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     International Keynote Speaker. <br>
     Author. <br>
     Conference Organizer and Community Facilitator. <br>
-    Principal Quality Engineer at Vaisala. <br>
+    Principal Test Engineer at Vaisala. <br>
     She/Her. <br>
     <br>
 
