--- a/myTalks.html
+++ b/myTalks.html
@@ -70,10 +70,12 @@
   <h2>UPCOMING CONFERENCES & MEETUPS & WEBINARS & TRAININGS</h2>
 
   <ul>
-    <li>German Testing Days May 3rd-4th, 2021
+    <li>Quality and Business Excellence Summit, March 10th, Online
       <br>KEYNOTE</li>
-    <li>COURSE: Testauksen alkeet, Alma Talent, 3rd week of January</li>
-    <li>COURSE: Tutkivan testauksen ty&ouml;kurssi, Alma Talent, Feb 9-10th</li>
+    <li>Breakpoint, March 23-24th, 2021, Online
+      <br>Contemporary Exploratory Testing</li>
+    <li>German Testing Days May 3rd-4th, 2021, Online
+      <br>KEYNOTE: Breaking illusions with testing</li>
   </ul>
 
 </p>I'm taking a break from traveling to conferences after I reached 400 sessions Dec 13th 2019,
@@ -91,6 +93,37 @@ happy to appear in podcasts, webinars, remote conferences and anything that requ
 
 <h2>FULL LIST OF SPEAKING ENGAGEMENTS</h2>
 <div style="text-align: left;">
+
+<i>Breaking Illusions with Testing</i><br />
+  &nbsp; Keynote Speaker at German Testing Day (3-4.5.2021), Online<br />
+  &nbsp; Keynote Speaker at JAX London (9.10.2019), London, United Kingdom<br />
+  &nbsp; Speaker at Agile Greece Summit (20.9.2019), Athens, Greece<br />
+  &nbsp; Keynote Speaker at DDD Europe (31.1-1.2.2019), Amsterdam, the Netherlands<br />
+  &nbsp; Speaker at Conferencia Agile Testers - Brazilian Online Conference (28.10.2018)<br />
+<br />
+
+<i>Contemporary Exploratory Testing</i><br />
+&nbsp; Speaker at Breakpoint (23-24.3.2021), Online<br />
+&nbsp; Keynote Speaker at Selenium Summit 2021 (7.2.2021), Online<br />
+<br />
+
+<i>How to Increase Your Impact</i><br />
+&nbsp; Speaker at a customer organization (22.1.2021), Online<br />
+<br />
+
+<i>Exploratory Testing Work Course</i><br />
+&nbsp; Trainer for Alma Talent (2-days), Helsinki, Finland (9-10.2.2021) <br />
+&nbsp; Trainer for Alma Talent (2-days), Helsinki, Finland (18-19.3.2020) <br />
+&nbsp; Trainer for a customer organization (1-day), London, UK (16.1.2019) <br />
+&nbsp; Trainer for Alma (2-days), Helsinki, Finland (4-5.9.2018) <br />
+&nbsp; Trainer for F-Secure internal (1-day), Oulu, Finland 15.8.2018 <br />
+&nbsp; Trainer for F-Secure internal (1-day), Helsinki, Finland 19.6.2018 <br />
+&nbsp; Trainer for Alma (2-days), Helsinki, Finland (15-16.2.2017) <br />
+&nbsp; Trainer for a customer organization (1-day), Helsinki, Finland (13.4.2016)<br />
+&nbsp; Trainer for Ministry of Testing public course (1-day), Brighton, UK (22.10.2015)<br />
+&nbsp; Trainer for a customer organization (1-day), Helsinki, Finland (26.11.2015)<br />
+&nbsp; Trainer for Altom public course (1-day), Helsinki, Finland (6.5.2015)<br />
+<br />
 
 <i>Building Status - or Why None of My Advice Will Work for You Today</i><br />
 &nbsp; Keynote Speaker at Agile Testing Alliance Global Testing Retreat (12-13.12.2020), Online<br />
@@ -177,29 +210,9 @@ happy to appear in podcasts, webinars, remote conferences and anything that requ
     &nbsp; Trainer at Brewing Agile 2020 (4.3.2020), Gothenburg, Sweden<br />
   <br />
 
-<i>Exploratory Testing Work Course</i><br />
-  &nbsp; Trainer for Alma Talent (2-days), Helsinki, Finland (18-19.3.2020) <br />
-  &nbsp; Trainer for a customer organization (1-day), London, UK (16.1.2019) <br />
-  &nbsp; Trainer for Alma (2-days), Helsinki, Finland (4-5.9.2018) <br />
-  &nbsp; Trainer for F-Secure internal (1-day), Oulu, Finland 15.8.2018 <br />
-  &nbsp; Trainer for F-Secure internal (1-day), Helsinki, Finland 19.6.2018 <br />
-  &nbsp; Trainer for Alma (2-days), Helsinki, Finland (15-16.2.2017) <br />
-  &nbsp; Trainer for a customer organization (1-day), Helsinki, Finland (13.4.2016)<br />
-  &nbsp; Trainer for Ministry of Testing public course (1-day), Brighton, UK (22.10.2015)<br />
-  &nbsp; Trainer for a customer organization (1-day), Helsinki, Finland (26.11.2015)<br />
-  &nbsp; Trainer for Altom public course (1-day), Helsinki, Finland (6.5.2015)<br />
-  <br />
-
 <i>Exploratory Testing on Computer Interfaces</i><br />
     &nbsp; Keynote Speaker at API Conf 2019 (16.10.2019), Berlin, Germany<br />
   <br />
-
-<i>Breaking Illusions with Testing</i><br />
-  &nbsp; Keynote Speaker at JAX London (9.10.2019), London, United Kingdom<br />
-  &nbsp; Speaker at Agile Greece Summit (20.9.2019), Athens, Greece<br />
-  &nbsp; Keynote Speaker at DDD Europe (31.1-1.2.2019), Amsterdam, the Netherlands<br />
-  &nbsp; Speaker at Conferencia Agile Testers - Brazilian Online Conference (28.10.2018)<br />
-<br />
 
 <i>Intersection of Automation and Exploratory Testing</i> <a href="https://www.youtube.com/watch?v=Es4SfYog5VA&t=12s">[video]</a><br />
   &nbsp; Speaker at Dev# (21.9.2019), Gdansk, Poland.<br />
