--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@ d="M0,192L34.3,202.7C68.6,213,137,235,206,229.3C274.3,224,343,192,411,160C480,12
             </li>
             <li>
               <span class="icon-book"></span>
-              <a href="http://mobprogrammingguidebook.xyz" target="_blank" rel="noopener noreferrer">Mob Programming Guidebook</a>
+              <a href="http://ensembleprogramming.xyz" target="_blank" rel="noopener noreferrer">Ensemble Programming Guidebook</a>
             </li>
             <li>
               <span class="icon-book"></span>
@@ -165,7 +165,7 @@ d="M0,192L34.3,202.7C68.6,213,137,235,206,229.3C274.3,224,343,192,411,160C480,12
         <h3>... and my projects</h3>
         <ul>
           <li><a href="https://exploratorytesting.libsyn.com">Exploratory Testing Podcast</a></li>
-          <li><a href="">Exploratory Testing Academy</a></li>
+          <li><a href="https://www.exploratorytestingacademy.com">Exploratory Testing Academy</a></li>
           <li><a href="https://techvoices.org"> Tech Voices </a></li>
           <li><a href="https://testausyhdistys.fi"> Finnish Association for Software Testing</a></li>
           <ku><a href="ETI.html">Exploratory Testing Index</a></li>
