--- a/myTalks.html
+++ b/myTalks.html
@@ -70,23 +70,29 @@
   <h2>UPCOMING CONFERENCES & MEETUPS & WEBINARS & TRAININGS</h2>
 
   <ul>
-    <li>Quality and Business Excellence Summit, March 10th, Online
-      <br>KEYNOTE</li>
-    <li>Breakpoint, March 23-24th, 2021, Online
+    <li><a href="https://experience.mabl.com/tour">mabl Experience Tour</a>, March 23rd, 2021, Online
+      <br> Fireside chat with Maaret Pyhäjärvi </li>
+    <li><a href="https://www.browserstack.com/events/breakpoint">Breakpoint</a>, March 23-24th, 2021, Online
       <br>Contemporary Exploratory Testing</li>
-    <li>German Testing Days May 3rd-4th, 2021, Online
-      <br>KEYNOTE: Breaking illusions with testing</li>
+    <li>Chain Conversations, March 31st, 2021, Online
+      <br>Communities Today</li>
+    <li><a href="https://ti.to/exploratory-testing-academy">Exploratory Testing Academy</a>, April 26-29th
+      <br>Exploratory Testing with a Constraint: Unconfirmed Issues
+      <br>Exploratory Testing with a Constraint: Test Automation
+      <br>Exploratory Testing with a Constraint: Self-Management
+      <br>Contemporary Exploratory Testing Ask Anyone Anything</li>
+    <li><a href="https://www.germantestingday.info/german-testing-day-2021.html">German Testing Days May 3rd-4th, 2021, Online
+      <br>KEYNOTE: Breaking Illusions with Testing</li>
   </ul>
 
 </p>I'm taking a break from traveling to conferences after I reached 400 sessions Dec 13th 2019,
 happy to appear in podcasts, webinars, remote conferences and anything that requires no travel. <p>
 
-  <!--
   <H2>UPCOMING PUBLIC TRAININGS</H2>
   <ul style="text-align: left;">
+  <li> <a href="https://koulutus.almatalent.fi/tutkivan-testauksen-tyokurssi/">Tutkivan testauksen työkurssi</a>,
+  Alma Talent, 26-27.5.2021
     </ul>
-   -->
-
 
 <p><p>
 
@@ -96,6 +102,7 @@ happy to appear in podcasts, webinars, remote conferences and anything that requ
 
 <i>Breaking Illusions with Testing</i><br />
   &nbsp; Keynote Speaker at German Testing Day (3-4.5.2021), Online<br />
+  &nbsp; Keynote Speaker at SLASSCOM Quality and Business Excellence Summit (10.3.2021), Online<br />
   &nbsp; Keynote Speaker at JAX London (9.10.2019), London, United Kingdom<br />
   &nbsp; Speaker at Agile Greece Summit (20.9.2019), Athens, Greece<br />
   &nbsp; Keynote Speaker at DDD Europe (31.1-1.2.2019), Amsterdam, the Netherlands<br />
@@ -103,8 +110,35 @@ happy to appear in podcasts, webinars, remote conferences and anything that requ
 <br />
 
 <i>Contemporary Exploratory Testing</i><br />
-&nbsp; Speaker at Breakpoint (23-24.3.2021), Online<br />
+&nbsp; Speaker at Breakpoint (24.3.2021), Online<br />
 &nbsp; Keynote Speaker at Selenium Summit 2021 (7.2.2021), Online<br />
+<br />
+
+<i>Fireside Chat with Maaret Pyhäjärvi</i><br />
+&nbsp; Speaker at mabl Experience tour 2021 (23.3.2021), Online<br />
+<br />
+
+<i>Communities Today</i><br />
+&nbsp; Speaker at Chain Conversations 2021 (31.3.2021), Online<br />
+
+<i>An Update on What Happens in Testing</i><br />
+&nbsp; Speaker at a customer organization  (23.3.2021), Online<br />
+<br />
+
+<i>Exploratory Testing with a Constraint: Unconfirmed Issues</i><br />
+&nbsp; Trainer at Exploratory Testing Academy  (26.4.2021), Online<br />
+<br />
+
+<i>Exploratory Testing with a Constraint: Test Automation</i><br />
+&nbsp; Trainer at Exploratory Testing Academy  (27.4.2021), Online<br />
+<br />
+
+<i>Exploratory Testing with a Constraint: Self-Management</i><br />
+&nbsp; Trainer at Exploratory Testing Academy  (28.4.2021), Online<br />
+<br />
+
+<i>Contemporary Exploratory Testing Ask Anyone Anything</i><br />
+&nbsp; Trainer at Exploratory Testing Academy  (29.4.2021), Online<br />
 <br />
 
 <i>How to Increase Your Impact</i><br />
@@ -112,6 +146,7 @@ happy to appear in podcasts, webinars, remote conferences and anything that requ
 <br />
 
 <i>Exploratory Testing Work Course</i><br />
+&nbsp; Trainer for Alma Talent (2-days), Helsinki, Finland (26-27.5.2021) <br />
 &nbsp; Trainer for Alma Talent (2-days), Helsinki, Finland (9-10.2.2021) <br />
 &nbsp; Trainer for Alma Talent (2-days), Helsinki, Finland (18-19.3.2020) <br />
 &nbsp; Trainer for a customer organization (1-day), London, UK (16.1.2019) <br />
