--- a/index.html
+++ b/index.html
@@ -78,6 +78,8 @@
     <img class="flag" height="20" src="flags/4x3/in.svg" alt="India">
     <img class="flag" height="20" src="flags/4x3/au.svg" alt="Australia">
     <img class="flag" height="20" src="flags/4x3/tr.svg" alt="Turkey">
+    <img class="flag" height="20" scr="flags/4x3/lk.svg" alt="Sri Lanka">
+    <!-- <img class="flag" height="20" scr="flags/4x3/my.svg" alt="Malaysia" -->
       <!--Total talk count by end of 2020 426 talks-->
       <!--add flags of all countries I've spoken at-->
       <br />
