--- a/myTalks.html
+++ b/myTalks.html
@@ -38,7 +38,7 @@
 
 <h1>Speaking Engagements</h1>
 
-<h4>Spoken at events in 24 countries</h4>
+<h4>Spoken at events in 25 countries</h4>
     <img class="flag" height="20" src="flags/4x3/fi.svg" alt="Finland ">
     <img class="flag" height="20" src="flags/4x3/se.svg" alt="Sweden">
     <img class="flag" height="20" src="flags/4x3/no.svg" alt="Norway">
@@ -63,6 +63,8 @@
     <img class="flag" height="20" src="flags/4x3/in.svg" alt="India">
     <img class="flag" height="20" src="flags/4x3/au.svg" alt="Australia">
     <img class="flag" height="20" src="flags/4x3/tr.svg" alt="Turkey">
+    <img class="flag" height="20" scr="flags/4x3/lk.svg" alt="Sri Lanka">
+    <!-- <img class="flag" height="20" scr="flags/4x3/my.svg" alt="Malaysia" -->
 
 <p><p>
 
@@ -81,7 +83,7 @@
       <br>Exploratory Testing with a Constraint: Test Automation
       <br>Exploratory Testing with a Constraint: Self-Management
       <br>Contemporary Exploratory Testing Ask Anyone Anything</li>
-    <li><a href="https://www.germantestingday.info/german-testing-day-2021.html">German Testing Days May 3rd-4th, 2021, Online
+    <li><a href="https://www.germantestingday.info/german-testing-day-2021.html">German Testing Day</a>, May 3rd-4th, 2021, Online
       <br>KEYNOTE: Breaking Illusions with Testing</li>
   </ul>
 
