--- a/myTalks.html
+++ b/myTalks.html
@@ -63,7 +63,7 @@
     <img class="flag" height="20" src="flags/4x3/in.svg" alt="India">
     <img class="flag" height="20" src="flags/4x3/au.svg" alt="Australia">
     <img class="flag" height="20" src="flags/4x3/tr.svg" alt="Turkey">
-    <img class="flag" height="20" scr="flags/4x3/lk.svg" alt="Sri Lanka">
+    <img class="flag" height="20" src="flags/4x3/lk.svg" alt="Sri Lanka">
     <!-- <img class="flag" height="20" scr="flags/4x3/my.svg" alt="Malaysia" -->
 
 <p><p>
