--- a/myTalks.html
+++ b/myTalks.html
@@ -38,7 +38,7 @@
 
 <h1>Speaking Engagements</h1>
 
-<h4>Spoken at events in 25 countries</h4>
+<h4>Spoken at events in 26 countries</h4>
     <img class="flag" height="20" src="flags/4x3/fi.svg" alt="Finland ">
     <img class="flag" height="20" src="flags/4x3/se.svg" alt="Sweden">
     <img class="flag" height="20" src="flags/4x3/no.svg" alt="Norway">
@@ -63,6 +63,7 @@
     <img class="flag" height="20" src="flags/4x3/in.svg" alt="India">
     <img class="flag" height="20" src="flags/4x3/au.svg" alt="Australia">
     <img class="flag" height="20" src="flags/4x3/tr.svg" alt="Turkey">
+    <img class="flag" height="20" src="flags/4x3/nz.svg" alt="New Zealand">
     <img class="flag" height="20" src="flags/4x3/lk.svg" alt="Sri Lanka">
     <!-- <img class="flag" height="20" scr="flags/4x3/my.svg" alt="Malaysia" -->
 
