--- a/myTalks.html
+++ b/myTalks.html
@@ -85,7 +85,9 @@
       <br>Exploratory Testing with a Constraint: Self-Management
       <br>Contemporary Exploratory Testing Ask Anyone Anything</li>
     <li><a href="https://www.germantestingday.info/german-testing-day-2021.html">German Testing Day</a>, May 3rd-4th, 2021, Online
-      <br>KEYNOTE: Breaking Illusions with Testing</li>
+      <br>Breaking Illusions with Testing</li>
+    <li>QA Talks, June 4th 2021, Online.
+      <br>Hands-off Exploratory Testing - How to Manage Test at Scale
   </ul>
 
 </p>I'm taking a break from traveling to conferences after I reached 400 sessions Dec 13th 2019,
@@ -114,18 +116,23 @@ happy to appear in podcasts, webinars, remote conferences and anything that requ
 
 <i>Contemporary Exploratory Testing</i><br />
 &nbsp; Speaker at Breakpoint (24.3.2021), Online<br />
-&nbsp; Keynote Speaker at Selenium Summit 2021 (7.2.2021), Online<br />
+&nbsp; Keynote Speaker at Selenium Summit (7.2.2021), Online<br />
+<br />
+
+<i>Hands-off Exploratory Testing - How to Manage Test at Scale</i><br />
+&nbsp; Speaker at QA Talks (4.6.2021), Online<br />
 <br />
 
 <i>Fireside Chat with Maaret Pyhäjärvi</i><br />
-&nbsp; Speaker at mabl Experience tour 2021 (23.3.2021), Online<br />
+&nbsp; Speaker at mabl Experience tour (23.3.2021), Online<br />
 <br />
 
 <i>Communities Today</i><br />
-&nbsp; Speaker at Chain Conversations 2021 (31.3.2021), Online<br />
+&nbsp; Speaker at Chain Conversations (31.3.2021), Online<br />
+<br />
 
 <i>An Update on What Happens in Testing</i><br />
-&nbsp; Speaker at a customer organization  (23.3.2021), Online<br />
+&nbsp; Speaker at a customer organization  (18.3.2021), Online<br />
 <br />
 
 <i>Exploratory Testing with a Constraint: Unconfirmed Issues</i><br />
