--- a/myTalks.html
+++ b/myTalks.html
@@ -73,12 +73,6 @@
   <h2>UPCOMING CONFERENCES & MEETUPS & WEBINARS & TRAININGS</h2>
 
   <ul>
-    <li><a href="https://experience.mabl.com/tour">mabl Experience Tour</a>, March 23rd, 2021, Online
-      <br> Fireside chat with Maaret Pyhäjärvi </li>
-    <li><a href="https://www.browserstack.com/events/breakpoint">Breakpoint</a>, March 23-24th, 2021, Online
-      <br>Contemporary Exploratory Testing</li>
-    <li>Chain Conversations, March 31st, 2021, Online
-      <br>Communities Today</li>
     <li><a href="https://ti.to/exploratory-testing-academy">Exploratory Testing Academy</a>, April 26-29th
       <br>Exploratory Testing with a Constraint: Unconfirmed Issues
       <br>Exploratory Testing with a Constraint: Test Automation
@@ -117,6 +111,10 @@ happy to appear in podcasts, webinars, remote conferences and anything that requ
 <i>Contemporary Exploratory Testing</i><br />
 &nbsp; Speaker at Breakpoint (24.3.2021), Online<br />
 &nbsp; Keynote Speaker at Selenium Summit (7.2.2021), Online<br />
+<br />
+
+<i>Exploring Pipelines</i> <a href="https://dev.to/maaretp/exploring-pipelines-32og">[Talk turned article]</a><br />
+&nbsp; Speaker at TSQA meetup (1.4.2021), Online<br />
 <br />
 
 <i>Hands-off Exploratory Testing - How to Manage Test at Scale</i><br />
