--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@ d="M0,192L34.3,202.7C68.6,213,137,235,206,229.3C274.3,224,343,192,411,160C480,12
           <li><a href="https://exploratorytesting.libsyn.com">Exploratory Testing Podcast</a></li>
           <li><a href="https://www.exploratorytestingacademy.com">Exploratory Testing Academy</a></li>
           <li><a href="https://techvoices.org"> Tech Voices </a></li>
-          <li><a href="https://testausyhdistys.fi"> Finnish Association for Software Testing</a></li>
+          <li><a href="https://www.facebook.com/groups/ohjelmistotestausry"> Finnish Association for Software Testing</a></li>
           <ku><a href="ETI.html">Exploratory Testing Index</a></li>
         </ul>
     </div>
