--- a/index.html
+++ b/index.html
@@ -124,8 +124,8 @@ d="M0,192L34.3,202.7C68.6,213,137,235,206,229.3C274.3,224,343,192,411,160C480,12
             <a href="https://visible-quality.blogspot.com" target="_blank" rel="noopener noreferrer me" title="Blog">Read my blog</a>
           </li>
           <li>
-            <span class=""></span>
-            <a href="https://dev.to/maaretp>" target="_blank" rel="noopener noreferrer me" title="Blog">Read my talks turned articles</a>
+            <span class="icon-sparkles"></span>
+            <a href="https://dev.to/maaretp"> target="_blank" rel="noopener noreferrer me" title="Blog">Read my talks turned articles</a>
           </li>
           <li>
             <span class="icon-youtube"></span>
