--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@ d="M0,192L34.3,202.7C68.6,213,137,235,206,229.3C274.3,224,343,192,411,160C480,12
           </li>
           <li>
             <span class="icon-sparkles"></span>
-            <a href="https://dev.to/maaretp"> target="_blank" rel="noopener noreferrer me" title="Blog">Read my talks turned articles</a>
+            <a href="https://dev.to/maaretp" target="_blank" rel="noopener noreferrer me" title="Blog">Read my talks turned articles</a>
           </li>
           <li>
             <span class="icon-youtube"></span>
