--- a/myArticles.html
+++ b/myArticles.html
@@ -55,6 +55,7 @@
   <ul style="text-align: left;">
     <li><a href="http://visible-quality.blogspot.fi">A Seasoned Testers Crystal Ball</a></li>
     <li><a href="https://medium.com/@maaretp">Maaret on Medium</a></li>
+    <li><a href="https://dev.to/maaretp">Talks Turned Articles</a></li>
   </ul>
 
   <h2>PODCAST APPEARANCES</h2>
