--- a/myTalks.html
+++ b/myTalks.html
@@ -87,7 +87,7 @@
 </p>I'm taking a break from traveling to conferences after I reached 400 sessions Dec 13th 2019,
 happy to appear in podcasts, webinars, remote conferences and anything that requires no travel. <p>
 
-<img src="img/Talks2021.png" alt="statistics of talks from Maaret" width="100">
+<img src="img/Talks2021.png" alt="statistics of talks from Maaret">
 
   <H2>UPCOMING PUBLIC TRAININGS</H2>
   <ul style="text-align: left;">
