--- a/myTalks.html
+++ b/myTalks.html
@@ -73,15 +73,12 @@
   <h2>UPCOMING CONFERENCES & MEETUPS & WEBINARS & TRAININGS</h2>
 
   <ul>
-    <li><a href="https://ti.to/exploratory-testing-academy">Exploratory Testing Academy</a>, April 26-29th
-      <br>Exploratory Testing with a Constraint: Unconfirmed Issues
-      <br>Exploratory Testing with a Constraint: Test Automation
-      <br>Exploratory Testing with a Constraint: Self-Management
-      <br>Contemporary Exploratory Testing Ask Anyone Anything</li>
-    <li><a href="https://www.germantestingday.info/german-testing-day-2021.html">German Testing Day</a>, May 3rd-4th, 2021, Online
-      <br>Breaking Illusions with Testing</li>
     <li>QA Talks, June 4th 2021, Online.
-      <br>Hands-off Exploratory Testing - How to Manage Test at Scale
+      <br>KEYNOTE: Hands-off Exploratory Testing - How to Manage Test at Scale</li>
+    <li>Virtual Event, June 29th 2021, Online.
+      <br>KEYNOTE: Cognitive Dissonance - How Changing Behaviors Changes Beliefs aka. 4xCD</li>
+    <li>EuroSTAR Testing Conference, September 30th, 2021, Online.
+      <br>KEYNOTE: The Automationist's Gambit</li>
   </ul>
 
 </p>I'm taking a break from traveling to conferences after I reached 400 sessions Dec 13th 2019,
@@ -101,6 +98,18 @@ happy to appear in podcasts, webinars, remote conferences and anything that requ
 <h2>FULL LIST OF SPEAKING ENGAGEMENTS</h2>
 <div style="text-align: left;">
 
+<i>The Automationist's Gambit</i><br />
+&nbsp; Keynote Speaker at EuroSTAR (30.9.2021), Online<br />
+<br />
+
+<i>Cognitive Dissonance - How Changing Behaviors Changes Beliefs aka. 4xCD</i><br />
+&nbsp; Keynote Speaker at Virtual Event (29.6.2021), Online<br />
+<br />
+
+<i>Hands-off Exploratory Testing - How to Manage Test at Scale</i><br />
+&nbsp; Keynote Speaker at QA Talks (4.6.2021), Online<br />
+<br />
+
 <i>Breaking Illusions with Testing</i><br />
   &nbsp; Keynote Speaker at German Testing Day (3-4.5.2021), Online<br />
   &nbsp; Keynote Speaker at SLASSCOM Quality and Business Excellence Summit (10.3.2021), Online<br />
@@ -119,8 +128,8 @@ happy to appear in podcasts, webinars, remote conferences and anything that requ
 &nbsp; Speaker at TSQA meetup (1.4.2021), Online<br />
 <br />
 
-<i>Hands-off Exploratory Testing - How to Manage Test at Scale</i><br />
-&nbsp; Speaker at QA Talks (4.6.2021), Online<br />
+<i>Exploring the Exploratory with Maaret Pyhäjärvi</i><br />
+&nbsp; Speaker at Ministry of Testing Bangalore (7.5.2021), Online<br />
 <br />
 
 <i>Fireside Chat with Maaret Pyhäjärvi</i><br />
