Updated latest talks, totaling 449.

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
     <i>I make people awesome.</i><p>
 
-    <h4>Spoken at events in 26 countries</h4>
+    <h4>Spoken at events in 27 countries</h4>
     <img class="flag" height="20" src="flags/4x3/fi.svg" alt="Finland ">
     <img class="flag" height="20" src="flags/4x3/se.svg" alt="Sweden">
     <img class="flag" height="20" src="flags/4x3/no.svg" alt="Norway">
@@ -80,7 +80,7 @@
     <img class="flag" height="20" src="flags/4x3/tr.svg" alt="Turkey">
     <img class="flag" height="20" src="flags/4x3/nz.svg" alt="New Zealand">
     <img class="flag" height="20" src="flags/4x3/lk.svg" alt="Sri Lanka">
-    <!-- <img class="flag" height="20" scr="flags/4x3/my.svg" alt="Malaysia" -->
+    <img class="flag" height="20" scr="flags/4x3/my.svg" alt="Malaysia">
       <!--Total talk count by end of 2020 427 talks-->
       <!--add flags of all countries I've spoken at-->
       <br />
