--- a/myTalks.html
+++ b/myTalks.html
@@ -38,7 +38,7 @@
 
 <h1>Speaking Engagements</h1>
 
-<h4>Spoken at events in 26 countries</h4>
+<h4>Spoken at events in 27 countries</h4>
     <img class="flag" height="20" src="flags/4x3/fi.svg" alt="Finland ">
     <img class="flag" height="20" src="flags/4x3/se.svg" alt="Sweden">
     <img class="flag" height="20" src="flags/4x3/no.svg" alt="Norway">
@@ -65,7 +65,7 @@
     <img class="flag" height="20" src="flags/4x3/tr.svg" alt="Turkey">
     <img class="flag" height="20" src="flags/4x3/nz.svg" alt="New Zealand">
     <img class="flag" height="20" src="flags/4x3/lk.svg" alt="Sri Lanka">
-    <!-- <img class="flag" height="20" scr="flags/4x3/my.svg" alt="Malaysia" -->
+    <img class="flag" height="20" scr="flags/4x3/my.svg" alt="Malaysia">
 
 <p><p>
 
@@ -73,25 +73,23 @@
   <h2>UPCOMING CONFERENCES & MEETUPS & WEBINARS & TRAININGS</h2>
 
   <ul>
-    <li>QA Talks, June 4th 2021, Online.
-      <br>KEYNOTE: Hands-off Exploratory Testing - How to Manage Test at Scale</li>
-    <li>Virtual Event, June 29th 2021, Online.
-      <br>KEYNOTE: Cognitive Dissonance - How Changing Behaviors Changes Beliefs aka. 4xCD</li>
     <li>EuroSTAR Testing Conference, September 30th, 2021, Online.
       <br>KEYNOTE: The Automationist's Gambit</li>
+    <li>tbd Conference, October 18-21, 2021, Online.
+      <br>KEYNOTE: tbd</li>
   </ul>
 
 </p>I'm taking a break from traveling to conferences after I reached 400 sessions Dec 13th 2019,
 happy to appear in podcasts, webinars, remote conferences and anything that requires no travel. <p>
 
 <img src="img/Talks2021.png" alt="statistics of talks from Maaret" width="300">
-
+<!--
   <H2>UPCOMING PUBLIC TRAININGS</H2>
   <ul style="text-align: left;">
   <li> <a href="https://koulutus.almatalent.fi/tutkivan-testauksen-tyokurssi/">Tutkivan testauksen työkurssi</a>,
   Alma Talent, 26-27.5.2021
     </ul>
-
+-->
 <p><p>
 
 
@@ -102,8 +100,12 @@ happy to appear in podcasts, webinars, remote conferences and anything that requ
 &nbsp; Keynote Speaker at EuroSTAR (30.9.2021), Online<br />
 <br />
 
-<i>Cognitive Dissonance - How Changing Behaviors Changes Beliefs aka. 4xCD</i><br />
-&nbsp; Keynote Speaker at Virtual Event (29.6.2021), Online<br />
+<i>Practice Makes Better - Five Times to Continuous Delivery</i><br />
+&nbsp; Keynote Speaker at Applitools Future of Testing (29.6.2021), Online<br />
+<br />
+
+<i>Testing Becoming Harder to Be Valuable</i><br />
+&nbsp; Keynote Speaker at Testing Voices (29.6.2021), Online<br />
 <br />
 
 <i>Hands-off Exploratory Testing - How to Manage Test at Scale</i><br />
