Added missing 3 sessions. Also realized I miscounted planned as done. Total 452, currently at 450.

--- a/myTalks.html
+++ b/myTalks.html
@@ -147,14 +147,17 @@ happy to appear in podcasts, webinars, remote conferences and anything that requ
 <br />
 
 <i>Exploratory Testing with a Constraint: Unconfirmed Issues</i><br />
+&nbsp; Trainer at a customer organization (11.6.2021), Online<br />
 &nbsp; Trainer at Exploratory Testing Academy  (26.4.2021), Online<br />
 <br />
 
 <i>Exploratory Testing with a Constraint: Test Automation</i><br />
+&nbsp; Trainer at a customer organization  (10.6.2021), Online<br />
 &nbsp; Trainer at Exploratory Testing Academy  (27.4.2021), Online<br />
 <br />
 
 <i>Exploratory Testing with a Constraint: Self-Management</i><br />
+&nbsp; Trainer at a customer organization  (9.6.2021), Online<br />
 &nbsp; Trainer at Exploratory Testing Academy  (28.4.2021), Online<br />
 <br />
 
